--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:theme="@style/Theme.HelloWorld">
         <activity
             android:name=".widget.WidgetConfigActivity"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
 
@@ -40,6 +40,18 @@
             </intent-filter>
         </activity>
         <receiver
+            android:name=".widget.TieAppWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/tie_app_widget_info" />
+        </receiver>
+
+        <receiver
             android:name=".widget.ConfigWidget"
             android:exported="true">
             <intent-filter>
@@ -50,7 +62,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/config_widget_info" />
         </receiver>
-
         <receiver
             android:name=".widget.GifWidget"
             android:exported="true">
@@ -63,9 +74,9 @@
                 android:resource="@xml/gif_widget_info" />
         </receiver>
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
