--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloWorld">
         <activity
+            android:name=".ime.ImeActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing|stateAlwaysHidden" />
+        <activity
             android:name=".widget.WidgetConfigActivity"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".constraint.ConstraintActivity"
             android:exported="false" />
@@ -39,6 +42,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver
             android:name=".widget.TieAppWidget"
             android:exported="true">
@@ -50,7 +54,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/tie_app_widget_info" />
         </receiver>
-
         <receiver
             android:name=".widget.ConfigWidget"
             android:exported="true">
@@ -74,9 +77,10 @@
                 android:resource="@xml/gif_widget_info" />
         </receiver>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
