--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.helloworld">
 
+
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -9,7 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.HelloWorld">
+        <activity
+            android:name=".web.WebActivity"
+            android:exported="false" />
         <activity
             android:name=".widget.WidgetConfigActivity"
             android:exported="false">
@@ -17,7 +22,6 @@
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".constraint.ConstraintActivity"
             android:exported="false" />
@@ -39,6 +43,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver
             android:name=".widget.TieAppWidget"
             android:exported="true">
@@ -50,7 +55,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/tie_app_widget_info" />
         </receiver>
-
         <receiver
             android:name=".widget.ConfigWidget"
             android:exported="true">
@@ -74,9 +78,9 @@
                 android:resource="@xml/gif_widget_info" />
         </receiver>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
