--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
 
     //mmkv
     implementation 'com.tencent:mmkv:1.2.13'
+
+    //permissionx
+    implementation 'com.guolindev.permissionx:permissionx:1.6.1'
+
 }
