修改：将画廊改为横向移动

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".rv.RvActivity"
+            android:screenOrientation="landscape"
             android:exported="false" />
 
         <provider
