新增：二维码生成

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
     //permissionx
     implementation 'com.guolindev.permissionx:permissionx:1.6.1'
 
+    // QRCode generate
+    implementation 'com.google.zxing:core:3.5.0'
 }
