--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.helloworld_server"
+        applicationId "com.example.helloworld_client"
         minSdk 21
         targetSdk 29
         versionCode 1
