新增：FLAG_ACTIVITY_EXCLUDE_FROM_RECENTS测试，使用该属性启动Activity时，如果被启动的Activity为栈底，那么退到后台时，该任务栈会隐藏，但实际上该任务栈是存活的。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:taskAffinity="com.example.task2" />
 
         <activity
+            android:name=".launchmode.ExcludeActivity"
+            android:launchMode="singleTask"
+            android:taskAffinity="com.example.task2" />
+
+        <activity
             android:name=".screenshot.GetTopActivity"
             android:exported="false" />
         <activity
