--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloWorld"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".share.ReceiveActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="image/*" />
+                <data android:mimeType="video/*" />
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name=".screenshot.MyAccessibilityService"
@@ -29,7 +41,6 @@
         </service>
 
         <activity android:name=".launchmode.StartActivity" />
-
         <activity
             android:name=".launchmode.StandardActivity"
             android:launchMode="standard" />
@@ -47,12 +58,10 @@
             android:name=".launchmode.AllowTaskReparentingActivity"
             android:allowTaskReparenting="true"
             android:taskAffinity="com.example.task2" />
-
         <activity
             android:name=".launchmode.ExcludeActivity"
             android:launchMode="singleTask"
             android:taskAffinity="com.example.task2" />
-
         <activity
             android:name=".screenshot.GetTopActivity"
             android:exported="false" />
@@ -81,7 +90,7 @@
         </provider>
 
         <activity
-            android:name=".share.ShareActivity"
+            android:name=".share.TestShareActivity"
             android:exported="false" />
         <activity
             android:name=".web.WebActivity"
