新增：多进程实现方式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,8 @@
             android:exported="false" />
         <activity
             android:name=".chat.ChatServerActivity"
+            android:launchMode="singleTask"
+            android:taskAffinity="com.example.chatServer"
             android:exported="false" />
         <activity
             android:name=".chat.ChatClientActivity"
