--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,9 @@ dependencies {
     //permissionx
     implementation 'com.guolindev.permissionx:permissionx:1.6.1'
 
+    implementation "androidx.media3:media3-exoplayer:1.3.1"
+    implementation "androidx.media3:media3-ui:1.3.1"
+    implementation "androidx.media3:media3-common:1.3.1"
+    implementation "androidx.media3:media3-session:1.3.1"
+
 }
